fix: remove background-image declarations causing unwanted img elements
- Remove coins-tablet1.png and coins-render 1.png from LoginPage
- Remove dolartablet.png and dolardesktop1.png from RegisterPage
- Vite/React was converting CSS background-image to DOM img elements
- This caused 'undefined undefined' className and layout issues
- Now using clean dark background with glow effects only

--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -101,10 +101,6 @@
 @media screen and (min-width: 768px) {
   .wrapper {
     padding: 40px;
-    background-image: url('/images/coins-tablet1.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
   }
   
   .card {
@@ -121,10 +117,6 @@
 @media screen and (min-width: 1200px) {
   .wrapper {
     padding: 60px;
-    background-image: url('/images/coins-render 1.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
   }
   
   .card {
